<resources>
    <string name="app_name">Ugunduzi</string>
    <string name="loginActivityTitle">Ugunduzi</string>
    <string name="userAliasLabel">Your name</string>
    <string name="userPasswordLabel">Your password</string>
    <string name="loginButtonText">START</string>
    <string name="okButtonText">OK</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="emptyString"></string>
    <string name="defineServerLabel">Enter server URL</string>
    <string name="downloadDataProgressDialogTitle">Downloading</string>
    <string name="pleaseConnectMessage">Please connect to the internet</string>
    <string name="wrongPasswordLabel">Wrong password</string>
    <string name="incorrectServerURLMessage">Incorrect server URL</string>
    <string name="createNewUserLabel">Creating new user</string>
    <string name="drawNewFarmTitle">Draw new farm</string>
    <string name="defineNewFarmDialogTitle">New farm</string>
    <string name="newFarmNameLabel">Enter name of new farm</string>
    <string name="enterAcresLabel">Size (acres)</string>
    <string name="defaultFarmNamePrefix">Shamba </string>
    <string name="farmNameCannotBeEmptyMessage">Farm name cannot be empty</string>
    <string name="farmSizeMustBeAboveZero">Farm size must be above zero</string>
    <string name="opAddPlot">Add plot</string>
    <string name="opSaveFarm">Save farm</string>
    <string name="opSwitchUser">Change user</string>
    <string name="farmHasNotBeenSavedMessage">This farm has not been saved. Do you really want to exit?</string>
    <string name="logoutConfirmMessage">Do you really want to log out?</string>
    <string name="yesButtonText">Yes</string>
    <string name="noButtonText">No</string>
    <string name="selectPlotMessage">You must select a plot</string>
    <string name="farmMustHavePlotMessage">Farm must have at least one plot.</string>
    <string name="noSpaceForNewPlotMessage">There is no space for a new plot.</string>
    <string name="opDeletePlot">Delete selected plot</string>
    <string name="deletePlotConfirmMessage">Do you really want to delete the selected plot?</string>
    <string name="opEditFarmNameSize">Edit farm name and size</string>
    <string name="enterCrop1Label">Crop one</string>
    <string name="textNone">None</string>
    <string name="enterCrop2Label">Crop two</string>
    <string name="enterTreatment1Label">Treatment one</string>
    <string name="enterTreatment2Label">Treatment two</string>
    <string name="createNewFarmLabel">Creating new farm</string>
    <string name="farmSavedMessage">Farm saved successfully</string>
    <string name="farmNameRepeated">Farm name is repeated</string>
    <string name="chooseFarmTitle">Choose a farm</string>
    <string name="farmChooserActivityTitle">Ugunduzi</string>
    <string name="opDeleteSelectedFarms">Delete selected farms</string>
    <string name="opCreateNewFarm">Create new farm</string>
    <string name="opCancelNewFarm">Cancel new farm</string>
    <string name="opGoToOtherFarm">Switch to other farm</string>
    <string name="cancelNewFarmMessage">Cancel new farm?</string>
    <string name="noFarmsSelectedMessage">No farms selected</string>
    <string name="deleteFarmConfirmMessage">Do you really want to delete the selected farms?</string>
    <string name="deletingFarmsLabel">Deleting farms</string>
    <string name="pictureSoundButtonText">PICTURE + SOUND</string>
    <string name="dataButtonText">DATA</string>
    <string name="manageRecordsButton">PLOT RECORDS</string>
    <string name="plotCropLabel">Crop</string>
    <string name="plotTreatmentLabel">Treatment</string>
    <string name="previousDataItemsLabel">Previous data</string>
    <string name="dataItemLabel">Item</string>
    <string name="dateLabel">Date</string>
    <string name="enterNewDataItemButtonLabel">Enter new item</string>
    <string name="valueLabel">Value</string>
    <string name="unitsLabel">Units</string>
    <string name="saveButtonText">Save</string>
    <string name="enterDataActivityTitle">Enter data</string>
    <string name="dataNotSavedText">Data has not been saved. Do you really want to exit?</string>
    <string name="opGoBack">Go back</string>
    <string name="enterCropLabel">Crop</string>
    <string name="enterTreatmentLabel">Treatment</string>
    <string name="valueEmptyMessage">Value cannot be empty</string>
    <string name="valueNegativeMessage">Value cannot be negative</string>
    <string name="mustChooseCropMessage">You must choose a crop</string>
    <string name="mustChooseTreatmentMessage">You must choose a treatment</string>
    <string name="mustChooseUnitsMessage">You must specify the units</string>
    <string name="pictureSoundActivityTitle">Picture + sound</string>
    <string name="pictureButtonLabel">Take a picture</string>
    <string name="soundButtonLabel">Record sound</string>
    <string name="opPictureSound">Picture + sound</string>
    <string name="opManagePlotRecords">Plot records</string>
    <string name="opEnterData">Enter data</string>
    <string name="pictureSoundNotSavedText">Picture and sound have not been saved. Do you really want to exit?</string>
</resources>
