<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/measurementLayout"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".enterData"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:id="@+id/plotLabel"
            android:textSize="20dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/previousDataItemsLabel"
            android:textColor="@color/colorPrimary"
            android:id="@+id/previousDataItems"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/dataItems">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataItemLabel"
                    android:id="@+id/header1"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateLabel"
                    android:id="@+id/header2"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"/>
            </TableRow>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/childScrollView">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dataItemsTable">
                </TableLayout>
            </ScrollView>
        </TableLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterNewDataItemButtonLabel"
            android:id="@+id/enterDataButton"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:height="40dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dateLabel"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterDateText"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emptyString"
            android:id="@+id/dateButton"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:height="40dp"
            android:visibility="invisible"
            android:background="@drawable/button_background_light"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/valueLabel"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterValueText"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dataItemValue"
            android:background="@color/colorInput"
            android:textColor="@color/colorBlack"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:visibility="invisible"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/unitsLabel"
            android:textColor="@color/colorPrimary"
            android:id="@+id/enterUnitsText"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dataItemUnits"
            android:background="@color/colorInput"
            android:textColor="@color/colorBlack"
            android:imeOptions="actionDone"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/saveButtonText"
            android:id="@+id/saveButton"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:height="40dp"
            android:background="@drawable/button_background"
            android:visibility="invisible"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</ScrollView>